feat(Category): add api doc
